@@ -10,7 +10,7 @@
         </p>
 
         <p>
-        This requires setting hints -&gt; mode to number, and hints -&gt; scatter to false.
+        This requires setting hints -&gt; mode to number.
         </p>
 
         <p>
