@@ -6,7 +6,7 @@
     </head>
     <body>
         <p>
-        This page contains various links to test numbered hints. This requires setting hints -> mode to number, and hints -> scatter to false.
+        This page contains various links to test numbered hints. This requires setting hints -> mode to number.
         </p>
 
         <p>
